tests/fixtures/semantic/invalid/wrong-argument-count.ck
module app.bad

fn add(a: Int, b: Int) -> Int {
  return a + b
}

fn use() -> Int {
  return add(1)
}
